cambié algunos iconos

--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -23,9 +23,9 @@
   },
   "modules": [
     {
-      "type": "custom",
-      "format": "\u001b[38;2;255;128;0m⬤   \u001b[38;2;0;224;84m⬤   \u001b[38;2;64;188;244m⬤\u001b[0m"
-    },
+	"type": "custom",
+	"format": "\u001b[38;2;255;128;0m  \u001b[38;2;255;128;0m  \u001b[38;2;0;224;84m  \u001b[38;2;0;224;84m  \u001b[38;2;64;188;244m  \u001b[38;2;64;188;244m "
+   },
     {
       "type": "custom",
       "format": ""
@@ -149,7 +149,7 @@
     "break",
     {
       "type": "custom",
-      "format": "\u001b[38;2;255;128;0m⬤   \u001b[38;2;0;224;84m⬤   \u001b[38;2;64;188;244m⬤\u001b[0m"
+      "format": "\u001b[38;2;255;128;0m  \u001b[38;2;255;128;0m  \u001b[38;2;0;224;84m  \u001b[38;2;0;224;84m  \u001b[38;2;64;188;244m  \u001b[38;2;64;188;244m "
     }
   ]
 }
