--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,8 +1,8 @@
 {
   "layer": "top",
   "position": "top",
-  "height": 10,
-  "spacing": 2,
+  "height": 20,
+  "spacing": 1,
 
   "modules-left": [
     "hyprland/workspaces"
@@ -18,6 +18,7 @@
     "pulseaudio",
     "pulseaudio#microphone",
     "custom/caps-lock",
+    "backlight",
     "battery",
     "tray",
     "custom/power"
@@ -29,19 +30,25 @@
     "format": "{icon}",
     "format-icons": {
       "1": "",
-      "2": "",
-      "3": "",
-      "4": "󰈹",
+      "2": "󰈹",
+      "3": "󰊴",
+      "4": "",
       "5": "",
       "urgent": "",
       "focused": "",
-      "default": ""
-    }
+      "default": ""    },
+    "persistent-workspaces": {
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": [],
+      "5": []    }
   },
 
   "clock": {
     "format": "  {:%H:%M}",
-    "tooltip-format": "  {:%A %d %B %Y}"
+    "tooltip-format": "  {:%A %d %B %Y}",
+    "on-click-right": "gnome-calendar"
   },
 
   "cpu": {
@@ -75,6 +82,11 @@
   "interval": 1,
   "exec": "~/.config/waybar/scripts/caps-lock.sh",
   "return-type": "json"
+  },
+  "backlight": {
+    "device": "intel_backlight",
+    "format": "{percent}% {icon}",
+    "format-icons": ["", ""]
   },
   "battery": {
     "format": "{icon}  {capacity}%",
