--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -17,6 +17,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindleº
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 0
+bind = , Print, exec, ~/.config/hypr/scripts/screenshots.sh
 
 
 # Move focus with mainMod + arrow keys
