--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -10,5 +10,5 @@ exec-once = $terminal
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = waybar & hyprpaper
-exec-once = dunst
+exec-once = dunst &
 
