refactor: update appearance and autostart configurations, add environment variables, and create monitor configuration

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,25 +1,12 @@
+source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/programs.conf
+source = ~/.config/hypr/monitor.conf
 source = ~/.config/hypr/input.conf
-source = ~/.config/hypr/binds.conf
-source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/appearance.conf
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/binds.conf
 
 
-################
-### MONITORS ###
-################
-
-# See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hypr.land/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 
 
 ###################
@@ -57,4 +44,8 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Opacity rules
+windowrule = opacity 0.8 0.8, class:^(Spotify)$
+windowrule = opacity 0.8 0.8, class:^(kitty)$
 
