--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -7,8 +7,11 @@
 
 
 exec-once = $terminal
-exec-once = nm-applet &
-exec-once = blueman-applet &
+exec-once = nm-applet 
+exec-once = blueman-applet
 exec-once = waybar & hyprpaper
-exec-once = dunst &
+exec-once = dunst 
+
+# Reload config after startup to apply windowrules to autostart windows
+exec-once = sleep 1 && hyprctl reload
 
