feat: add brightness notifier script and configuration, update caps lock notification, and refine various settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-source = ~/.config/hypr/env.conf
+hysource = ~/.config/hypr/env.conf
 source = ~/.config/hypr/programs.conf
 source = ~/.config/hypr/monitor.conf
 source = ~/.config/hypr/input.conf
