--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -92,6 +92,7 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
+# windowrule = float, class:^(kitty)$
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
