--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -6,7 +6,7 @@
 # Or execute your favorite apps at launch like this:
 
 
-exec-once = $terminal
+# exec-once = $terminal
 exec-once = nm-applet 
 exec-once = blueman-applet
 exec-once = waybar & hyprpaper
