--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -7,14 +7,13 @@
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 12
+    gaps_out = 5
 
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
+    col.active_border = rgba(88c0d0ee) rgba(81a1c1ee) 45deg
+    col.inactive_border = rgba(4c566aaa)
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
 
@@ -86,13 +85,12 @@ animations {
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
-workspace = w[tv1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0
+# workspace = w[tv1], gapsout:0, gapsin:0
+# workspace = f[1], gapsout:0, gapsin:0
 windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 10, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
-# windowrule = float, class:^(kitty)$
+windowrule = rounding 10, floating:0, onworkspace:f[1]
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
