--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,7 +37,9 @@ source = ~/.config/hypr/binds.conf
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+windowrule = float,class:^(kitty)$,title:^(kitty)$
+windowrule = size 800 600,class:^(kitty)$,title:^(kitty)$
+windowrule = center,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
