--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,6 +3,10 @@
   "position": "top",
   "height": 20,
   "spacing": 0,
+  "margin-top": 5,
+  "margin-left": 10,
+  "margin-right": 10,
+
 
   "modules-left": [
     "custom/launcher",
@@ -59,6 +63,7 @@
   },
     "custom/cava": {
     "format": "{text}",
+    "hide-empty-text": true,
     "exec": "~/.config/waybar/scripts/cava-module.py",
     "return-type": "json"
   },
