this is my first commit of 2026 btw

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-hysource = ~/.config/hypr/env.conf
+# source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/programs.conf
 source = ~/.config/hypr/monitor.conf
 source = ~/.config/hypr/input.conf
@@ -26,7 +26,20 @@ source = ~/.config/hypr/binds.conf
 # permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
 
+# See https://wiki.hypr.land/Configuring/Environment-variables/
+
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct # O qt5ct si usas aplicaciones Qt5, o hyprqt6engine
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1 # Deshabilita las decoraciones de ventana nativas
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1 # Habilita el escalado automático
+# Si usas Kvantum para temas avanzados:
+env = QT_STYLE_OVERRIDE,kvantum
 
 
 ##############################
