--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -11,7 +11,7 @@ exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = waybar & hyprpaper
 exec-once = dunst 
-
+exec-once = ~/.config/hypr/scripts/spotify-notify.sh
 # Reload config after startup to apply windowrules to autostart windows
 exec-once = sleep 1 && hyprctl reload
 
