--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -6,5 +6,9 @@
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
-
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt6ct # O qt5ct si usas aplicaciones Qt5, o hyprqt6engine
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1 # Deshabilita las decoraciones de ventana nativas
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1 # Habilita el escalado automático
+# Si usas Kvantum para temas avanzados:
+# env = QT_STYLE_OVERRIDE,kvantum
