feat: add alert script and configure sound notifications in dunst

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -18,6 +18,7 @@ bind = $mainMod, J, togglesplit, # dwindleº
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 0
 bind = , Print, exec, ~/.config/hypr/scripts/screenshots.sh
+bind = $mainMod SHIFT, C, exec, code
 
 
 # Move focus with mainMod + arrow keys
