--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -87,10 +87,12 @@ animations {
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrule = rounding 10, floating:0, onworkspace:w[tv1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 10, floating:0, onworkspace:f[1]
+windowrule = border_size 0, rounding 10, match:float 0, match:workspace w[tv1]
+windowrule = border_size 0, rounding 10, match:float 0, match:workspace f[1]
+windowrule = opacity 1.0 override 1.0 override, workspace 5, match:class ^(mpv)$
+windowrule = workspace 3, match:class ^(spotify)$
+windowrule = workspace 2, match:class ^(brave)$
+
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -105,7 +107,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
