--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,17 +50,16 @@ env = QT_STYLE_OVERRIDE,kvantum
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-windowrule = float,class:^(kitty)$,title:^(kitty)$
-windowrule = size 800 600,class:^(kitty)$,title:^(kitty)$
-windowrule = center,class:^(kitty)$,title:^(kitty)$
+windowrule = float on, size 800 600, center on, match:class ^(kitty)$, match:title ^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
+
 
 # Opacity rules
-windowrule = opacity 0.8 0.8, class:^(Spotify)$
-windowrule = opacity 0.8 0.8, class:^(kitty)$
+windowrule = opacity 0.8 0.8, match:class ^(Spotify)$
+windowrule = opacity 0.8 0.8, match:class ^(kitty)$
 
