fix: disable Hyprland logo and update wallpaper configuration

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,6 @@
-preload = /home/richard/.config/hypr/wallpapers/wallpapernord.jpeg
-wallpaper = , /home/richard/.config/hypr/wallpapers/wallpapernord.jpeg
+wallpaper {
+    monitor =
+    path = ~/.config/hypr/wallpapers/wallpapernord.jpeg
+    fit_mode = cover
+  }
 
