refactor: replace shell scripts with Python scripts for alert and brightness notifications; update media controller script

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -11,7 +11,7 @@ exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = waybar & hyprpaper
 exec-once = dunst 
-exec-once = ~/.config/hypr/scripts/spotify-notify.sh
+exec-once = ~/.config/hypr/scripts/spotify-notify.py
 exec-once = ~/.config/hypr/scripts/battery-level.sh
 # Reload config after startup to apply windowrules to autostart windows
 exec-once = sleep 1 && hyprctl reload
