--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -69,14 +69,16 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # my binds
 bind = $mainMod, SPACE, exec, ~/.config/hypr/scripts/media_controller.sh
+bind = $mainMod SHIFT, LEFT, workspace, e-1
+bind = $mainMod SHIFT, RIGHT, workspace, e+1
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && ~/.config/hypr/scripts/volume-notifier.sh
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/scripts/volume-notifier.sh
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && ~/.config/hypr/scripts/brightness-notifier.sh
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && ~/.config/hypr/scripts/brightness-notifier.sh
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && ~/.config/hypr/scripts/brightness-notifier.py
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && ~/.config/hypr/scripts/brightness-notifier.py
 
 
 # Requires playerctl
