--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -31,7 +31,7 @@
 
   "custom/launcher": {
     "format": "󰣇",
-    "on-click": "wofi --show drun",
+    "on-click": "rofi --show drun",
     "tooltip-format": "Application launcher"
   },
 
@@ -55,7 +55,7 @@
       "3": [],
       "4": [],
       "5": [],
-      "6": [],
+      "6": []
     }
   },
 
@@ -116,7 +116,7 @@
   "format": "⏻",
   "tooltip-format": "Power menu",
   "on-click": "wlogout"
-  },
+  }
 
 }
 
