fix: update Rofi command to include icons in launcher configuration

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -31,7 +31,7 @@
 
   "custom/launcher": {
     "format": "󰣇",
-    "on-click": "rofi --show drun",
+    "on-click": "rofi -show drun -show-icons",
     "tooltip-format": "Application launcher"
   },
 
