--- a/hypr/programs.conf
+++ b/hypr/programs.conf
@@ -7,5 +7,5 @@
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi --show drun
+$menu = rofi -show drun -show-icons
 
