fix: update window rules for workspace assignments in appearance configuration

--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -91,7 +91,11 @@ windowrule = border_size 0, rounding 10, match:float 0, match:workspace w[tv1]
 windowrule = border_size 0, rounding 10, match:float 0, match:workspace f[1]
 windowrule = opacity 1.0 override 1.0 override, workspace 5, match:class ^(mpv)$
 windowrule = workspace 3, match:class ^(spotify)$
-windowrule = workspace 2, match:class ^(brave)$
+windowrule = workspace 6, match:class ^(obsidian)$
+windowrule = workspace 4, match:class ^(heroic)$
+windowrule = workspace 2, match:class ^(brave-browser)$
+windowrule = workspace 5, match:class ^(com.stremio.stremio)$
+windowrule = workspace 5, match:class ^(steam)$
 
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
