--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -15,12 +15,14 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
 gesture = 3, horizontal, workspace
+
+
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -31,5 +33,6 @@ device {
 
 device {
     name = synps/2-synaptics-touchpad
-    enabled = 0
+    enabled = 1
+   # sensitivity = -1.0
 }
