--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -15,4 +15,5 @@ exec-once = ~/.config/hypr/scripts/spotify-notify.py
 exec-once = ~/.config/hypr/scripts/battery-level.sh
 # Reload config after startup to apply windowrules to autostart windows
 exec-once = sleep 1 && hyprctl reload
+exec-once = hypridle
 
