fix: update window rules and styles for improved workspace management and module display

--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -95,7 +95,18 @@ windowrule = workspace 6, match:class ^(obsidian)$
 windowrule = workspace 4, match:class ^(heroic)$
 windowrule = workspace 2, match:class ^(brave-browser)$
 windowrule = workspace 5, match:class ^(com.stremio.stremio)$
-windowrule = workspace 5, match:class ^(steam)$
+windowrule = workspace 4, match:class ^(steam)$
+windowrule = workspace 5, match:class ^(org.kde.dolphin)$
+windowrule = float on, size 800 600, match:class ^(xdg-desktop-portal-gtk)$
+windowrule {
+  name = zen-google-login
+  match:class = ^zen$
+  match:title = ^Sign in - Google Accounts
+
+  float = on
+  center = on
+  size = 700 400
+}
 
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
