--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -96,7 +96,7 @@ windowrule = workspace 4, match:class ^(heroic)$
 windowrule = workspace 2, match:class ^(brave-browser)$
 windowrule = workspace 5, match:class ^(com.stremio.stremio)$
 windowrule = workspace 4, match:class ^(steam)$
-windowrule = workspace 5, match:class ^(org.kde.dolphin)$
+windowrule = workspace 5, match:class ^(org.gnome.Nautilus)$
 windowrule = float on, size 800 600, match:class ^(xdg-desktop-portal-gtk)$
 windowrule {
   name = zen-google-login
