--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -10,7 +10,7 @@
 exec-once = nm-applet 
 exec-once = blueman-applet
 exec-once = waybar & hyprpaper
-exec-once = dunst 
+exec-once = swaync 
 exec-once = ~/.config/hypr/scripts/spotify-notify.py
 exec-once = ~/.config/hypr/scripts/battery-level.sh
 # Reload config after startup to apply windowrules to autostart windows
