--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -8,24 +8,25 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, B, exec, brave
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindleº
+bind = $mainMod SHIFT, J, togglesplit, # dwindleº
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 0
-bind = , Print, exec, ~/.config/hypr/scripts/screenshots.sh
+bind = , Print, exec, hyprshot -m window
+bind = SHIFT, print, exec, hyprshot -m region
 bind = $mainMod SHIFT, C, exec, code
 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -52,7 +53,7 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # hyprlock
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, ESCAPE, exec, hyprlock
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -68,7 +69,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 
 # my binds
-bind = $mainMod, SPACE, exec, ~/.config/hypr/scripts/media_controller.sh
+bind = $mainMod, M, exec, ~/.config/hypr/scripts/media_controller.sh
 bind = $mainMod SHIFT, LEFT, workspace, e-1
 bind = $mainMod SHIFT, RIGHT, workspace, e+1
 
