--- a/hypr/programs.conf
+++ b/hypr/programs.conf
@@ -6,6 +6,6 @@
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun -show-icons
 
