--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -18,6 +18,7 @@
     "custom/caps-lock",
     "backlight",
     "battery",
+    "custom/notification",
     "tray",
     "custom/power"
   ],
@@ -114,6 +115,26 @@
   "battery": {
     "format": "{icon}  {capacity}%",
     "format-icons": ["", "", "", "", ""]
+  },
+    "custom/notification": {
+    "tooltip": true,
+    "format": "<span size='16pt'>{icon}</span>",
+    "format-icons": {
+      "notification": "󱅫",
+      "none": "󰂜",
+      "dnd-notification": "󰂠",
+      "dnd-none": "󰪓",
+      "inhibited-notification": "󰂛",
+      "inhibited-none": "󰪑",
+      "dnd-inhibited-notification": "󰂛",
+      "dnd-inhibited-none": "󰪑"
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
   },
 
   "tray": {
