--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -6,8 +6,8 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, Q, killactive
+bind = $mainMod SHIFT, Q, forcekillactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, B, exec, brave
 bind = $mainMod, E, exec, $fileManager
@@ -72,14 +72,27 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, M, exec, ~/.config/hypr/scripts/media_controller.sh
 bind = $mainMod SHIFT, LEFT, workspace, e-1
 bind = $mainMod SHIFT, RIGHT, workspace, e+1
+bind = $mainMod, tab, workspace, m+1
+bind = $mainMod SHIFT, tab, workspace, m-1
+bind = $mainMod, T, exec, $terminal
+bind = SUPER, N, exec, swaync-client -t
+
+
+# Resize window
+bind = $mainMod CTRL, right,resizeactive,70 0
+bind = $mainMod CTRL, left,resizeactive, -70 0
+bind = $mainMod CTRL, up,resizeactive,  0 -70
+bind = $mainMod CTRL, down,resizeactive, 0 70
+bind = $mainMod, W, centerwindow
+
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && ~/.config/hypr/scripts/volume-notifier.sh
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/scripts/volume-notifier.sh
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && ~/.config/hypr/scripts/brightness-notifier.py
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && ~/.config/hypr/scripts/brightness-notifier.py
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && ~/.config/hypr/scripts/brightness-notifier.sh
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && ~/.config/hypr/scripts/brightness-notifier.sh
 
 
 # Requires playerctl
