--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -58,14 +58,15 @@
     "tooltip-format": "{album}",
     "player-icons": {
       "default": "▶",
-      "mpv": "🎵"
+      "mpv": "🎵",
+      "spotify": "🎵"
     },
     "format-paused": " {artist} - {title}",
     "on-click": "playerctl play-pause",
     "on-scroll-up": "playerctl previous",
     "on-scroll-down": "playerctl next",
     "max-length": 35,
-    "ignore-players": ["brave-browser"]
+    "ignore-players": ["brave-browser", "brave", "Brave", "spotify"]
   },
 
   "clock": {
