feat: update keybindings and enhance app launcher; improve styling and autostart configuration

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -9,11 +9,10 @@
 # exec-once = $terminal
 exec-once = nm-applet 
 exec-once = blueman-applet
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & hypridle
 exec-once = swaync 
 exec-once = ~/.config/hypr/scripts/spotify-notify.py
 exec-once = ~/.config/hypr/scripts/battery-level.sh
 # Reload config after startup to apply windowrules to autostart windows
 exec-once = sleep 1 && hyprctl reload
-exec-once = hypridle
-
+exec-once = ags run
