--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,8 +8,8 @@ italic_font      auto
 bold_italic_font auto
 
 
-background #2E3440
-foreground #D8DEE9
+# background #2E3440
+# foreground #D8DEE9
 background_opacity 0.85
 
 # END_KITTY_FONTS
