feat: enhance app launcher and autostart configuration; add window rules for Blender and emoji, and new keybinding for hypremoji

--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -107,8 +107,24 @@ windowrule {
   center = on
   size = 700 400
 }
+windowrule {
+  name = blender-file-picker
+  match:class = ^blender$
+  match:title = ^Blender File View$
 
+  float = on
+  center = on
+  size = 700 400
+}
 
+windowrule {
+  name = emoji
+  match:class = ^dev.musagy.hypremoji$
+
+  float = on
+  center = on
+  size = 400 200
+}
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
