--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -16,3 +16,5 @@ exec-once = ~/.config/hypr/scripts/battery-level.sh
 # Reload config after startup to apply windowrules to autostart windows
 exec-once = sleep 1 && hyprctl reload
 exec-once = ags run
+exec-once = wl-paste --type text --watch cliphist store # Guarda texto
+exec-once = wl-paste --type image --watch cliphist store # Guarda imágenes
