--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -76,6 +76,7 @@ bind = $mainMod, tab, workspace, m+1
 bind = $mainMod SHIFT, tab, workspace, m-1
 bind = $mainMod, T, exec, $terminal
 bind = SUPER, N, exec, swaync-client -t
+bind = $mainMod SHIFT, period, exec, hypremoji 
 
 
 # Resize window
