--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,3 +63,6 @@ windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, matc
 windowrule = opacity 0.8 0.8, match:class ^(Spotify)$
 windowrule = opacity 0.8 0.8, match:class ^(kitty)$
 
+
+# HyprEmoji config
+source = ~/.config/hypremoji/hypremoji.conf
