--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -6,7 +6,7 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, killactive
+bind = $mainMod, C, killactive
 bind = $mainMod SHIFT, Q, forcekillactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, B, exec, brave
