feat: add window rule for GIMP to override opacity settings

--- a/hypr/appearance.conf
+++ b/hypr/appearance.conf
@@ -90,6 +90,7 @@ animations {
 windowrule = border_size 0, rounding 10, match:float 0, match:workspace w[tv1]
 windowrule = border_size 0, rounding 10, match:float 0, match:workspace f[1]
 windowrule = opacity 1.0 override 1.0 override, workspace 5, match:class ^(mpv)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(gimp|Gimp|GIMP)$
 windowrule = workspace 3, match:class ^(spotify)$
 windowrule = workspace 6, match:class ^(obsidian)$
 windowrule = workspace 4, match:class ^(heroic)$
